--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <body>
     <header class="page-header">
       <div class="container">
-      Контакты в шапке
+      <a class="header-email" href="mailto:spr.toster@yandex.ru">spr.toster@yandex.ru</a>
+      <a class="header-phone" href="tel:+79778786448">+7 977 878 64 48</a>
       </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
-      <h1 class="heading">Марк Коротун пидарас и хуесос</h1>
+      <h1 class="heading">Марк Коротун не будет учителем</h1>
       <p>Junior верстальщик</p>
       </div>
     </section>
@@ -24,6 +25,9 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="files/user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -34,8 +38,11 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт инструктора Кекса">
+      </figure>
       <h3>Сайт инструктора Кекса</h3>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -45,7 +52,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      Контакты в подвале
+        <a class="footer-email" href="mailto:spr.toster@yandex.ru">spr.toster@yandex.ru</a>
+        <a class="footer-phone" href="tel:+79778786448">+7 977 878 64 48</a>
     </div>
     </footer>
   </body>
